--- a/handson-ml2-master/05_support_vector_machines.ipynb
+++ b/handson-ml2-master/05_support_vector_machines.ipynb
@@ -93,19 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVC(C=inf, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
-       "  kernel='linear', max_iter=-1, probability=False, random_state=None,\n",
-       "  shrinking=True, tol=0.001, verbose=False)"
+       "SVC(C=inf, kernel='linear')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2943,7 +2940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "nav_menu": {},
   "toc": {
